<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/startmenuimg"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:background="@drawable/title"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="60dp"
                    android:src="@drawable/packyak" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction1"
                    android:textSize="32sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction2"
                    android:textSize="32sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TableRow android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/grassclean" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/cleanGrassRule"
                            android:textSize="22sp"
                            android:textStyle="bold"/>
                    </TableRow>

                    <TableRow
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/grassdirty" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/dirtyGrassRule"
                            android:textSize="22sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:src="@drawable/glowarrowcropped" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/gameOverRule"
                            android:textSize="22sp"
                            android:textStyle="bold"/>
                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/btnStartGame"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/startimg" />

                <Button
                    android:id="@+id/btnScoreboard"
                    android:layout_width="195dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/high_score" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/mutebutton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/playt"/>
                <!--        android:onClick="play" />-->
                <!--    <Button-->
                <!--        android:layout_width="wrap_content"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:text="pause"-->
                <!--        android:onClick="pause"/>-->
                <!--    <Button-->
                <!--        android:layout_width="wrap_content"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:text="Mute"-->
                <!--        android:onClick="stop"/>-->
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/highScoreMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/scrollimg"
        android:visibility="visible">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:src="@drawable/high_score"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnScoreEasy"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/easyscores"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnScoreHard"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/hardscores"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="textStart"
                android:paddingStart="30dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/scoreColor"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/scoreColor"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="textEnd"
                android:paddingEnd="30dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/scoreColor"
                android:layout_weight="1"/>

        </LinearLayout>

        <!--Easy mode-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/easyScoreboardRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:visibility="gone">
        </androidx.recyclerview.widget.RecyclerView>

        <!--Hard mode-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hardScoreboardRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:visibility="visible">
        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTryAgain"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/retryimg"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btnHomeScreen"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/homeimg"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/difficultyMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/scrollimg"
        android:weightSum="10"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="6">

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_return"
                android:layout_gravity="start"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:src="@drawable/difficulty"
                android:layout_gravity="center"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/btnEasy"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@drawable/easy"/>

            <Button
                android:id="@+id/btnHard"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@drawable/hard"/>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>